--- a/blog.html
+++ b/blog.html
@@ -29,8 +29,33 @@
 
 </head>
 <body>
-    <h1>
-        Hello Blog Part
-    </h1>  
+    <div class="collapse bg-base-200">
+        <input type="radio" name="my-accordion-1" checked="checked" /> 
+        <div class="collapse-title text-xl font-medium">
+          Click to open this one and close others
+        </div>
+        <div class="collapse-content"> 
+          <p>hello</p>
+        </div>
+      </div>
+      <div class="collapse bg-base-200">
+        <input type="radio" name="my-accordion-1" /> 
+        <div class="collapse-title text-xl font-medium">
+          Click to open this one and close others
+        </div>
+        <div class="collapse-content"> 
+          <p>hello</p>
+        </div>
+      </div>
+      <div class="collapse bg-base-200">
+        <input type="radio" name="my-accordion-1" /> 
+        <div class="collapse-title text-xl font-medium">
+          Click to open this one and close others
+        </div>
+        <div class="collapse-content"> 
+          <p>hello</p>
+        </div>
+      </div>
+    <script src="js/phero.js"></script>
 </body>
 </html>
