added categories btn

--- a/index.html
+++ b/index.html
@@ -75,7 +75,16 @@
             <hr />
         </nav>
     </header>
-    <main></main>
+    <main class="h-screen">
+        <section class="absolute ml-4 top-[40%] md:ml-40 lg:top-[25%] lg:mx-[35%]">
+            <div id="category-container" class="btn-group gap-5">
+                <!-- <button class="btn">All</button>
+                <button class="btn">Music</button>
+                <button class="btn">Comedy</button>
+                <button class="btn">Drawing</button> -->
+            </div>
+        </section>
+    </main>
     <script src="js/phero.js"></script>
 </body>
 </html>
