--- a/index.html
+++ b/index.html
@@ -75,37 +75,17 @@
             <hr />
         </nav>
     </header>
-    <main class="h-screen">
-        <section class="absolute ml-4 top-[40%] md:ml-40 lg:top-[25%] lg:mx-[35%]">
+    <main>
+        <section class="absolute ml-4 top-[40%] md:ml-40 lg:top-[35%] lg:mx-[35%]">
             <div id="category-container" class="btn-group gap-5">
                 <!-- <button class="btn">All</button>
                 <button class="btn">Music</button>
                 <button class="btn">Comedy</button>
                 <button class="btn">Drawing</button> -->
             </div>
-
-            <div id="card-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
-                <!-- <div class="card w-60 bg-base-100 shadow-xl rounded-3xl my-10">
-                    <a target="_blank" href="https://i.ibb.co/L1b6xSq/shape.jpg">
-                        <img class="w-60 h-40" src="https://i.ibb.co/L1b6xSq/shape.jpg" alt="" />
-                    </a>
-                    <div class="card-body  flex flex-col justify-center items-center">
-                        <div class="card-actions flex flex-col justify-center items-center">
-                            <div class="flex justify-items-start items-center gap-5">
-                                <img class="h-10 w-10 rounded-full" src="https://i.ibb.co/D9wWRM6/olivia.jpg" alt="">
-                                <h2 class="card-title text-xs">Building a Winning UX Strategy Using the Kano Model</h2>
-                            </div> 
-                            <div class="flex justify-center items-center gap-5">
-                                <h3 class="text-xs ml-[60px]">Olivia Mitchell</h3>
-                                <i class="fa-solid fa-check text-white bg-blue-700 h-5 w-5 
-                                    rounded-full text-xs font-bold text-center p-[3px]"></i>
-                            </div>
-                            <p class="text-xs text-left">100K views</p>
-                        </div>
-                    </div>
-                </div> -->
-            </div>
         </section>
+        <div id="card-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+        </div>
     </main>
     <script src="js/phero.js"></script>
 </body>
