--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </nav>
     </header>
     <main>
-        <section class="absolute ml-4 top-[40%] md:ml-40 lg:top-[35%] lg:mx-[35%]">
+        <section class="absolute ml-4 top-40 md:ml-40 lg:mx-[35%]">
             <div id="category-container" class="btn-group gap-5">
                 <!-- <button class="btn">All</button>
                 <button class="btn">Music</button>
@@ -84,7 +84,8 @@
                 <button class="btn">Drawing</button> -->
             </div>
         </section>
-        <div id="card-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+        <div id="card-container" class="absolute ml-20 top-64 grid grid-cols-1 md:grid-cols-2 
+            lg:container lg:grid-cols-4 gap-4">
         </div>
     </main>
     <script src="js/phero.js"></script>
