--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <button class="btn">Drawing</button> -->
             </div>
         </section>
-        <div id="card-container" class="absolute ml-20 top-64 grid grid-cols-1 md:grid-cols-2 
-            lg:container lg:grid-cols-4 gap-4">
+        <div id="card-container" class="absolute ml-20 pb-8 top-64 grid grid-cols-1 md:grid-cols-2 
+            lg:container lg:mx-auto lg:px-20 lg:grid-cols-4 gap-4">
         </div>
     </main>
     <script src="js/phero.js"></script>
