--- a/index.html
+++ b/index.html
@@ -53,24 +53,9 @@
     <header class="h-screen">
         <nav class="container mx-auto px-5">
             <div class="bg-base-100 flex justify-between items-center py-8">
-                <div class="logo flex justify-center items-center gap-3">
-                    <div class="playIcon h-10 w-10 rounded-full flex justify-center items-center bg-primaryColor
-                        text-xl text-white"><i class="fa-solid fa-play"></i>
-                    </div>
-                    <h1 class="text-3xl font-bold"><span class="text-primaryColor">PH</span>Tube</h1>
-                </div>
-                <button class="btn btn-active btn-ghost hidden lg:flex">Sort By View</button>
-                <button onclick="handleBlogBtn()" class="btn bg-primaryColor text-white hidden lg:flex">Blog</button>
-                <li class="relative list-none lg:hidden">
-                    <ion-icon onclick="onToggleMenu(this)" name ="menu" class="text-3xl"></ion-icon>
-                </li>
-                <div class="toggle-menu-items absolute left-0 bg-green-200 text-black w-full min-v-h-[60vh]
-                     flex flex-col justify-center items-center gap-5 top-[-100%] p-8 lg:hidden">
-                    <button class="bg-secondaryColor text-center font-semibold 
-                        p-3 text-lg w-[200px] h-[5%] rounded-xl">Search By View</button>
-                    <button onclick="handleBlogBtn()" class="bg-primaryColor text-center text-white font-semibold 
-                        text-lg p-3 w-[200px] h-[5%] rounded-xl">Blog</button>
-                </div>
+                <img src="images/Logo.png" alt="">
+                <button class="btn flex">Sort By View</button>
+                <button onclick="handleBlogBtn()" class="btn bg-primaryColor text-white flex">Blog</button>
             </div>
             <hr />
         </nav>
@@ -86,6 +71,13 @@
         </section>
         <div id="card-container" class="absolute ml-20 pb-8 top-64 grid grid-cols-1 md:grid-cols-2 
             lg:container lg:mx-auto lg:px-20 lg:grid-cols-4 gap-4">
+
+            <!-- <div class="flex justify-start items-center gap-3">
+                <img class="h-10 w-10 rounded-full" src="${video.authors[0]?.profile_picture}" alt="">
+                <h2 class="card-title text-xs">${video.title}</h2>
+            </div>  -->
+            <img id="verified-image" class="h-3 w-3 rounded-full" src="images/verfied.png" alt="">
+
         </div>
     </main>
     <script src="js/phero.js"></script>
